// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`articleContentConverter convert learningresource content 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "ranges": Array [
                  Object {
                    "kind": "range",
                    "marks": Array [],
                    "text": "Lorem ipsum",
                  },
                ],
              },
            ],
            "type": "heading-two",
          },
        ],
        "type": "section",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`articleContentConverter convert learningresource content to and from editorState 1`] = `"<section><h2>Lorem ipsum</h2></section>"`;

exports[`articleContentConverter convert learningresource content with multiple sections to and from editorState 1`] = `"<section><h2>Section 1</h2></section><section><h2>Section 2</h2></section><section><h2>Section 3</h2></section>"`;

exports[`articleContentConverter convert topic article content to and from editorState 1`] = `"<section><h2>Lorem ipsum</h2></section>"`;

exports[`util/domOperations trippleNestedSections into array 1`] = `
Array [
  "<section>Seksjon 1</section>",
  "<section><p>test paragraf</p><section><section>Seksjon 2 nested</section></section></section>",
  "<section>Seksjon 3</section>",
]
`;

exports[`util/sectionSplitter splits doubleNestedSections into array 1`] = `
Array [
  "<section>Seksjon 1</section>",
  "<section><p>test paragraf</p><section>Seksjon 2 nested</section></section>",
]
`;
